# pub-2025-01-van_Stokkum_et_al

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  .zenodo.json  CITATION.cff  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: build-pdfs.yml  test.yml
77K_target_MCL/: 20250201streak_target_supercomplex.ipynb  custom_plotting.py  pygta_config.yml
77K_target_MCL/data/: supercomplex_targeta.ascii  supercomplex_targetb.ascii
77K_target_MCL/guide/: 20241120megacomplex77K_PB1.ascii  20241120megacomplex77K_PB2.ascii  20241120megacomplex77K_PSI1.ascii  20241120megacomplex77K_PSI1_fitted.ascii  20241120megacomplex77K_PSI2.ascii  20241120megacomplex77K_PSI3.ascii  20241120megacomplex77K_PSII1.ascii  20241120megacomplex77K_PSII1_fitted.ascii  20241120megacomplex77K_PSII2.ascii  20241120megacomplex77K_PSII3.ascii  20241120megacomplex77K_freerod.ascii
77K_target_MCL/models/: 20241110streak_target_77K_supercomplex.csv  20241110streak_target_77K_supercomplex.yml  20241120streak_target_77K_supercomplex.csv  20241120streak_target_77K_supercomplex.yml  20250201streak_target_77K_supercomplex.yml  spectral_model.yml  spectral_model2.yml  spectral_params.yml  spectral_params2.yml
77K_target_cells/: 20250414streak_DG_WT_target_DA_FRL_PSIIdifferent.ipynb  20250415streak_DG_WT_target_DA_FRL_PSIIdifferent.ipynb  kinetic_scheme_visualizer.py  pygta_config.yml
77K_target_cells/data/: DG_whole_cells_after_red_light_targeta.ascii  (+7 more)
RT_target_WT_dPSII_cells_PB/: 20250414dPSII_PB580_540_532WT_FreePS_so_411rods.ipynb  pygta_config.schema.json
(+182 files in other folders)
